""" Builds rosidl_typesupport_protobuf.
"""

load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

cc_library(
    name = "rosidl_typesupport_protobuf_c_c",
    hdrs = glob(["rosidl_typesupport_protobuf_c/include/**/*.h"]),
    includes = ["rosidl_typesupport_protobuf_c/include"],
    srcs = glob(["rosidl_typesupport_protobuf_c/src/*.c"]),
    visibility = ["//visibility:public"],
    copts = ["-std=c11"],
)

cc_library(
    name = "rosidl_typesupport_protobuf_c",
    hdrs = glob(["rosidl_typesupport_protobuf_c/include/**/*.h"]),
    includes = ["rosidl_typesupport_protobuf_c/include"],
    srcs = glob([
        "rosidl_typesupport_protobuf_c/src/*.cpp",
        "rosidl_typesupport_protobuf_c/src/*.hpp",
    ]),
    deps = [
        ":rosidl_typesupport_protobuf_c_c",
        "@ros2_rcpputils//:rcpputils",
        "@ros2_rcutils//:rcutils",
        "@ros2_rosidl//:rosidl_runtime_c",
    ],
    visibility = ["//visibility:public"],
    copts = ["-std=c++14"],
)

cc_library(
    name = "rosidl_typesupport_protobuf_cpp",
    hdrs = glob([
        "rosidl_typesupport_protobuf_cpp/include/**/*.h",
        "rosidl_typesupport_protobuf_cpp/include/**/*.hpp",
    ]),
    includes = ["rosidl_typesupport_protobuf_cpp/include"],
    srcs = glob([
        "rosidl_typesupport_protobuf_cpp/src/*.cpp",
        "rosidl_typesupport_protobuf_cpp/src/*.hpp",
    ]),
    deps = [
        ":rosidl_typesupport_protobuf_c",
        "@ros2_rcpputils//:rcpputils",
        "@ros2_rosidl//:rosidl_runtime_c",
    ],
    visibility = ["//visibility:public"],
    copts = ["-std=c++14"],
)

py_library(
    name = "rosidl_typesupport_protobuf_generator_c_lib",
    srcs = ["rosidl_typesupport_protobuf_c/rosidl_typesupport_protobuf_c/__init__.py"],
    imports = ["rosidl_typesupport_protobuf_c"],
    deps = [
        "@ros2_rosidl//:rosidl_cmake",
        "@ros2_rosidl//:rosidl_parser",
    ],
    visibility = ["//visibility:public"],
)

_rosidl_typesupport_protobuf_GENERATOR_C_APP_PY = "rosidl_typesupport_protobuf_generator_c_app.py"

copy_file(
    name = "rosidl_typesupport_protobuf_generator_c_copy",
    src = "rosidl_typesupport_protobuf_c/bin/rosidl_typesupport_protobuf_c",
    out = _rosidl_typesupport_protobuf_GENERATOR_C_APP_PY,
)

py_binary(
    name = "rosidl_typesupport_protobuf_generator_c_app",
    srcs = [_rosidl_typesupport_protobuf_GENERATOR_C_APP_PY],
    main = _rosidl_typesupport_protobuf_GENERATOR_C_APP_PY,
    deps = [":rosidl_typesupport_protobuf_generator_c_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "rosidl_typesupport_protobuf_generator_c_templates",
    srcs = glob(["rosidl_typesupport_protobuf_c/resource/*.em"]),
    visibility = ["//visibility:public"],
)

exports_files([
    "rosidl_typesupport_protobuf_c/resource/rosidl_typesupport_protobuf_c__visibility_control.h.in",
])

py_library(
    name = "rosidl_typesupport_protobuf_generator_cpp_lib",
    srcs = ["rosidl_typesupport_protobuf_cpp/rosidl_typesupport_protobuf_cpp/__init__.py"],
    imports = ["rosidl_typesupport_protobuf_cpp"],
    deps = [
        "@ros2_rosidl//:rosidl_cmake",
        "@ros2_rosidl//:rosidl_parser",
    ],
    visibility = ["//visibility:public"],
)

_rosidl_typesupport_protobuf_GENERATOR_CPP_APP_PY = "rosidl_typesupport_protobuf_generator_cpp_app.py"

copy_file(
    name = "rosidl_typesupport_protobuf_generator_cpp_copy",
    src = "rosidl_typesupport_protobuf_cpp/bin/rosidl_typesupport_protobuf_cpp",
    out = _rosidl_typesupport_protobuf_GENERATOR_CPP_APP_PY,
)

py_binary(
    name = "rosidl_typesupport_protobuf_generator_cpp_app",
    srcs = [_rosidl_typesupport_protobuf_GENERATOR_CPP_APP_PY],
    main = _rosidl_typesupport_protobuf_GENERATOR_CPP_APP_PY,
    deps = [":rosidl_typesupport_protobuf_generator_cpp_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "rosidl_typesupport_protobuf_generator_cpp_templates",
    srcs = glob(["rosidl_typesupport_protobuf_cpp/resource/*.em"]),
    visibility = ["//visibility:public"],
)
